<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/thumb_big_normal_49e1d513f56276ccb4037c25c7ab2d4d" >

    <EditText
        android:id="@+id/txtPhoneNo"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_x="2dp"
        android:layout_y="15dp"
        android:hint="@string/recipient" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="68dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="138dp"
        android:gravity="top"
        android:hint="@string/message" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSendSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="183dp"
        android:layout_y="208dp"
        android:text="@string/encrypt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="277dp"
        android:text="@string/decrypt" />

</AbsoluteLayout>